<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".test.TestActivity"
        >

    <TextView
            android:id="@+id/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/question_txt"
            android:textSize="16sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            />

    <TextView
            android:id="@+id/currentQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/questionText"
            android:text="@string/one"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/currentQuestion"
            android:text="@string/twenty"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            />

    <TextView
            android:id="@+id/questionWord"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_marginBottom="108dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="32sp"
            />

    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_volume_up_white_24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/speak"
            android:contentDescription="TODO"
            />

    <ImageView
            android:layout_width="72dp"
            android:src="@drawable/ic_white_question"
            android:layout_height="72dp"
            android:background="@drawable/round_button"
            android:layout_marginBottom="64dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="180dp"
            android:padding="16dp"
            android:id="@+id/qImage"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    <Button
            android:layout_width="0dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/questionWord"
            app:layout_constraintBottom_toTopOf="@id/cVariant"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/answer_word"
            android:id="@+id/aVariant"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toLeftOf="@id/bVariant"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/button_answer_background"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            />

    <Button
            android:id="@+id/bVariant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/answer_word"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionWord"
            app:layout_constraintLeft_toRightOf="@+id/aVariant"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toTopOf="@id/dVariant"
            android:layout_marginTop="64dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/button_answer_background"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            />

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/aVariant"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/answer_word"
            android:id="@+id/cVariant"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintRight_toLeftOf="@id/dVariant"
            app:layout_constraintBottom_toTopOf="@id/okImage"
            android:layout_marginLeft="16dp"
            android:textAllCaps="false"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_answer_background"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            />

    <Button
            android:id="@+id/dVariant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bVariant"
            app:layout_constraintLeft_toRightOf="@id/cVariant"
            android:text="@string/answer_word"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toTopOf="@id/nextImage"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_answer_background"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            />

    <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_done_white_36dp"
            android:background="@drawable/round_button"
            android:layout_marginBottom="64dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="180dp"
            android:padding="16dp"
            android:id="@+id/okImage"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    <ImageView
            android:padding="16dp"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_navigate_next_white_24dp"
            android:background="@drawable/round_button"
            android:layout_marginBottom="64dp"
            app:layout_constraintLeft_toRightOf="@+id/okImage"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="180dp"
            android:id="@+id/nextImage"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_close_black_24dp"
            android:background="@drawable/round_button"
            android:layout_marginBottom="64dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="180dp"
            android:padding="16dp"
            android:id="@+id/wrongImage"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            />
</android.support.constraint.ConstraintLayout>